package server

import (
	"context"
	"fmt"
	"jas-agent/storage"
	"jas-agent/tools"

	pb "jas-agent/api/proto"
)

// CreateAgent åˆ›å»ºAgent
func (s *AgentServer) CreateAgent(ctx context.Context, req *pb.AgentConfigRequest) (*pb.AgentConfigResponse, error) {
	if s.db == nil {
		return &pb.AgentConfigResponse{
			Success: false,
			Message: "æ•°æ®åº“æœªé…ç½®",
		}, nil
	}

	// éªŒè¯æ¡†æ¶ç±»å‹
	validFrameworks := []string{"react", "plan", "chain", "sql", "elasticsearch"}
	isValid := false
	for _, f := range validFrameworks {
		if req.Framework == f {
			isValid = true
			break
		}
	}
	if !isValid {
		return &pb.AgentConfigResponse{
			Success: false,
			Message: "æ— æ•ˆçš„æ¡†æ¶ç±»å‹ï¼Œå¿…é¡»æ˜¯: react, plan, chain, sql, elasticsearch",
		}, nil
	}

	// åˆ›å»ºAgenté…ç½®
	agentConfig := &storage.AgentConfig{
		Name:             req.Name,
		Framework:        req.Framework,
		Description:      req.Description,
		SystemPrompt:     req.SystemPrompt,
		MaxSteps:         int(req.MaxSteps),
		Model:            req.Model,
		MCPServices:      req.McpServices,
		ConnectionConfig: req.ConnectionConfig,
		IsActive:         true,
	}
	if len(agentConfig.Config) == 0 {
		agentConfig.Config = "{}"
	}
	if len(agentConfig.ConnectionConfig) == 0 {
		agentConfig.ConnectionConfig = "{}"
	}

	// ä¿å­˜åˆ°æ•°æ®åº“
	if err := s.db.CreateAgent(agentConfig); err != nil {
		return &pb.AgentConfigResponse{
			Success: false,
			Message: fmt.Sprintf("åˆ›å»ºå¤±è´¥: %v", err),
		}, nil
	}

	fmt.Printf("âœ… Agentå·²åˆ›å»º: ID=%d, åç§°=%s, æ¡†æ¶=%s\n", agentConfig.ID, agentConfig.Name, agentConfig.Framework)

	return &pb.AgentConfigResponse{
		Success: true,
		Message: fmt.Sprintf("æˆåŠŸåˆ›å»ºAgent '%s'", req.Name),
		Agent:   s.agentConfigToProto(agentConfig),
	}, nil
}

// UpdateAgent æ›´æ–°Agent
func (s *AgentServer) UpdateAgent(ctx context.Context, req *pb.AgentConfigRequest) (*pb.AgentConfigResponse, error) {
	if s.db == nil {
		return &pb.AgentConfigResponse{
			Success: false,
			Message: "æ•°æ®åº“æœªé…ç½®",
		}, nil
	}

	// éªŒè¯æ¡†æ¶ç±»å‹ï¼ˆå¦‚æœæä¾›ï¼‰
	if req.Framework != "" {
		validFrameworks := []string{"react", "plan", "chain", "sql", "elasticsearch"}
		isValid := false
		for _, f := range validFrameworks {
			if req.Framework == f {
				isValid = true
				break
			}
		}
		if !isValid {
			return &pb.AgentConfigResponse{
				Success: false,
				Message: "æ— æ•ˆçš„æ¡†æ¶ç±»å‹ï¼Œå¿…é¡»æ˜¯: react, plan, chain, sql, elasticsearch",
			}, nil
		}
	}

	// æ›´æ–°Agenté…ç½®
	agentConfig := &storage.AgentConfig{
		ID:               int(req.Id),
		Name:             req.Name,
		Framework:        req.Framework,
		Description:      req.Description,
		SystemPrompt:     req.SystemPrompt,
		MaxSteps:         int(req.MaxSteps),
		Model:            req.Model,
		MCPServices:      req.McpServices,
		ConnectionConfig: req.ConnectionConfig,
		IsActive:         true,
	}

	if err := s.db.UpdateAgent(agentConfig); err != nil {
		return &pb.AgentConfigResponse{
			Success: false,
			Message: fmt.Sprintf("æ›´æ–°å¤±è´¥: %v", err),
		}, nil
	}

	fmt.Printf("âœ… Agentå·²æ›´æ–°: ID=%d, åç§°=%s\n", agentConfig.ID, agentConfig.Name)

	return &pb.AgentConfigResponse{
		Success: true,
		Message: fmt.Sprintf("æˆåŠŸæ›´æ–°Agent '%s'", req.Name),
		Agent:   s.agentConfigToProto(agentConfig),
	}, nil
}

// DeleteAgent åˆ é™¤Agent
func (s *AgentServer) DeleteAgent(ctx context.Context, req *pb.AgentDeleteRequest) (*pb.AgentConfigResponse, error) {
	if s.db == nil {
		return &pb.AgentConfigResponse{
			Success: false,
			Message: "æ•°æ®åº“æœªé…ç½®",
		}, nil
	}

	if err := s.db.DeleteAgent(int(req.Id)); err != nil {
		return &pb.AgentConfigResponse{
			Success: false,
			Message: fmt.Sprintf("åˆ é™¤å¤±è´¥: %v", err),
		}, nil
	}

	fmt.Printf("ğŸ—‘ï¸ Agentå·²åˆ é™¤: ID=%d\n", req.Id)

	return &pb.AgentConfigResponse{
		Success: true,
		Message: "æˆåŠŸåˆ é™¤Agent",
	}, nil
}

// GetAgent è·å–Agent
func (s *AgentServer) GetAgent(ctx context.Context, req *pb.AgentGetRequest) (*pb.AgentConfigResponse, error) {
	if s.db == nil {
		return &pb.AgentConfigResponse{
			Success: false,
			Message: "æ•°æ®åº“æœªé…ç½®",
		}, nil
	}

	agentConfig, err := s.db.GetAgent(int(req.Id))
	if err != nil {
		return &pb.AgentConfigResponse{
			Success: false,
			Message: fmt.Sprintf("æŸ¥è¯¢å¤±è´¥: %v", err),
		}, nil
	}

	return &pb.AgentConfigResponse{
		Success: true,
		Message: "æŸ¥è¯¢æˆåŠŸ",
		Agent:   s.agentConfigToProto(agentConfig),
	}, nil
}

// ListAgents åˆ—å‡ºæ‰€æœ‰Agent
func (s *AgentServer) ListAgents(ctx context.Context, req *pb.Empty) (*pb.AgentListResponse, error) {
	if s.db == nil {
		return &pb.AgentListResponse{
			Agents: []*pb.AgentConfig{},
		}, nil
	}

	agentConfigs, err := s.db.ListAgents()
	if err != nil {
		fmt.Printf("âŒ æŸ¥è¯¢Agentåˆ—è¡¨å¤±è´¥: %v\n", err)
		return &pb.AgentListResponse{
			Agents: []*pb.AgentConfig{},
		}, nil
	}

	agents := make([]*pb.AgentConfig, len(agentConfigs))
	for i, config := range agentConfigs {
		agents[i] = s.agentConfigToProto(config)
	}

	return &pb.AgentListResponse{
		Agents: agents,
	}, nil
}

// agentConfigToProto è½¬æ¢Agenté…ç½®ä¸ºProtoæ ¼å¼
func (s *AgentServer) agentConfigToProto(config *storage.AgentConfig) *pb.AgentConfig {
	return &pb.AgentConfig{
		Id:               int32(config.ID),
		Name:             config.Name,
		Framework:        config.Framework,
		Description:      config.Description,
		SystemPrompt:     config.SystemPrompt,
		MaxSteps:         int32(config.MaxSteps),
		Model:            config.Model,
		McpServices:      config.MCPServices,
		CreatedAt:        config.CreatedAt.Format("2006-01-02 15:04:05"),
		UpdatedAt:        config.UpdatedAt.Format("2006-01-02 15:04:05"),
		IsActive:         config.IsActive,
		ConnectionConfig: config.ConnectionConfig,
	}
}

// loadMCPServicesFromDB ä»æ•°æ®åº“åŠ è½½MCPæœåŠ¡
func (s *AgentServer) loadMCPServicesFromDB() {
	if s.db == nil {
		return
	}

	services, err := s.db.ListMCPServices()
	if err != nil {
		fmt.Printf("âš ï¸ ä»æ•°æ®åº“åŠ è½½MCPæœåŠ¡å¤±è´¥: %v\n", err)
		return
	}

	for _, service := range services {
		if !service.IsActive {
			continue
		}

		// åˆ›å»ºMCPå·¥å…·ç®¡ç†å™¨
		mcpManager, err := tools.NewMCPToolManager(service.Name, service.Endpoint)
		if err != nil {
			fmt.Printf("âš ï¸ åˆ›å»ºMCPå·¥å…·ç®¡ç†å™¨å¤±è´¥ [%s]: %v\n", service.Name, err)
			continue
		}

		// å¯åŠ¨å·¥å…·å‘ç°
		mcpManager.Start()

		// æ³¨å†Œåˆ°å…¨å±€å·¥å…·ç®¡ç†å™¨
		tools.GetToolManager().RegisterMCPToolManager(service.Name, mcpManager)

		// ä¿å­˜åˆ°å†…å­˜
		s.mcpLock.Lock()
		s.mcpServices[service.Name] = &MCPServiceInfo{
			Name:        service.Name,
			Endpoint:    service.Endpoint,
			Manager:     mcpManager,
			Active:      true,
			ToolCount:   service.ToolCount,
			CreatedAt:   service.CreatedAt,
			LastRefresh: service.LastRefresh,
		}
		s.mcpLock.Unlock()

		fmt.Printf("ğŸ“‹ å·²åŠ è½½MCPæœåŠ¡: %s (%dä¸ªå·¥å…·)\n", service.Name, service.ToolCount)
	}
}
