package server

import (
	"context"
	"fmt"
	"jas-agent/agent"
	"jas-agent/core"
	"jas-agent/llm"
	"jas-agent/memory"
	"jas-agent/tools"
	"strings"
	"sync"
	"time"

	pb "jas-agent/api/proto"
)

// AgentServer å®ç° AgentService gRPC æœåŠ¡
type AgentServer struct {
	pb.UnimplementedAgentServiceServer
	chat         llm.Chat
	sessions     map[string]*SessionContext
	sessionsLock sync.RWMutex
}

// SessionContext ä¼šè¯ä¸Šä¸‹æ–‡
type SessionContext struct {
	Memory    core.Memory
	Context   *agent.Context
	CreatedAt time.Time
	UpdatedAt time.Time
}

// NewAgentServer åˆ›å»ºæ–°çš„ Agent æœåŠ¡
func NewAgentServer(chat llm.Chat) *AgentServer {
	return &AgentServer{
		chat:     chat,
		sessions: make(map[string]*SessionContext),
	}
}

// Chat å®ç°å•æ¬¡å¯¹è¯
func (s *AgentServer) Chat(ctx context.Context, req *pb.ChatRequest) (*pb.ChatResponse, error) {
	startTime := time.Now()

	// åˆ›å»ºæˆ–è·å–ä¼šè¯ä¸Šä¸‹æ–‡
	agentCtx, err := s.getOrCreateSession(req)
	if err != nil {
		return &pb.ChatResponse{
			Success: false,
			Error:   err.Error(),
		}, nil
	}

	// åˆ›å»ºæ‰§è¡Œå™¨
	executor, err := s.createExecutor(req, agentCtx)
	if err != nil {
		return &pb.ChatResponse{
			Success: false,
			Error:   err.Error(),
		}, nil
	}

	// æ‰§è¡ŒæŸ¥è¯¢
	result := executor.Run(req.Query)

	// æ”¶é›†å…ƒæ•°æ®
	metadata := &pb.ExecutionMetadata{
		TotalSteps:      int32(executor.GetCurrentStep()),
		ExecutionTimeMs: time.Since(startTime).Milliseconds(),
		State:           string(executor.GetState()),
	}

	// æ”¶é›†ä½¿ç”¨çš„å·¥å…·
	toolNames := s.extractToolNames(agentCtx.GetMemory())
	metadata.ToolNames = toolNames
	metadata.ToolsCalled = int32(len(toolNames))

	return &pb.ChatResponse{
		Response:  result,
		AgentType: s.getAgentTypeName(req.AgentType),
		Metadata:  metadata,
		Success:   true,
	}, nil
}

// StreamChat å®ç°æµå¼å¯¹è¯
func (s *AgentServer) StreamChat(req *pb.ChatRequest, stream pb.AgentService_StreamChatServer) error {
	startTime := time.Now()
	// åœ¨æ–°çš„goroutineä¸­æ‰§è¡Œ
	resultChan := make(chan string)

	// åˆ›å»ºæˆ–è·å–ä¼šè¯ä¸Šä¸‹æ–‡
	agentCtx, err := s.getOrCreateSession(req)
	if err != nil {
		return stream.Send(&pb.ChatStreamResponse{
			Type:    pb.ChatStreamResponse_ERROR,
			Content: err.Error(),
		})
	}

	// åˆ›å»ºæ‰§è¡Œå™¨
	executor, err := s.createExecutor(req, agentCtx)
	if err != nil {
		return stream.Send(&pb.ChatStreamResponse{
			Type:    pb.ChatStreamResponse_ERROR,
			Content: err.Error(),
		})
	}

	// åˆ›å»ºæ¶ˆæ¯ç›‘å¬é€šé“
	messageChan := make(chan core.Message, 10)
	done := make(chan bool)

	// å¯åŠ¨æ¶ˆæ¯ç›‘å¬å™¨
	go s.monitorExecution(agentCtx.GetMemory(), messageChan, done)

	go func() {
		result := executor.Run(req.Query)
		resultChan <- result
		close(done)
	}()

	// æµå¼å‘é€æ‰§è¡Œè¿‡ç¨‹
	step := 0
	for {
		select {
		case msg, ok := <-messageChan:
			if !ok {
				goto SEND_FINAL
			}

			step++
			msgType, content := s.parseMessage(msg)

			if err := stream.Send(&pb.ChatStreamResponse{
				Type:    msgType,
				Content: content,
				Step:    int32(step),
			}); err != nil {
				return err
			}

		case result := <-resultChan:
			// å‘é€æœ€ç»ˆç»“æœ
			metadata := &pb.ExecutionMetadata{
				TotalSteps:      int32(executor.GetCurrentStep()),
				ExecutionTimeMs: time.Since(startTime).Milliseconds(),
				State:           string(executor.GetState()),
			}

			toolNames := s.extractToolNames(agentCtx.GetMemory())
			metadata.ToolNames = toolNames
			metadata.ToolsCalled = int32(len(toolNames))

			return stream.Send(&pb.ChatStreamResponse{
				Type:     pb.ChatStreamResponse_FINAL,
				Content:  result,
				Metadata: metadata,
			})
		}
	}

SEND_FINAL:
	// ç­‰å¾…æœ€ç»ˆç»“æœ
	result := <-resultChan
	metadata := &pb.ExecutionMetadata{
		TotalSteps:      int32(executor.GetCurrentStep()),
		ExecutionTimeMs: time.Since(startTime).Milliseconds(),
		State:           string(executor.GetState()),
	}

	return stream.Send(&pb.ChatStreamResponse{
		Type:     pb.ChatStreamResponse_FINAL,
		Content:  result,
		Metadata: metadata,
	})
}

// ListAgentTypes åˆ—å‡ºå¯ç”¨çš„ Agent ç±»å‹
func (s *AgentServer) ListAgentTypes(ctx context.Context, req *pb.Empty) (*pb.AgentTypesResponse, error) {
	types := []*pb.AgentTypeInfo{
		{
			Type:        pb.AgentType_REACT,
			Name:        "ReAct Agent",
			Description: "é€šç”¨æ¨ç†ä»£ç†ï¼Œæ”¯æŒæ€è€ƒ-è¡ŒåŠ¨-è§‚å¯Ÿå¾ªç¯",
			Available:   true,
		},
		{
			Type:        pb.AgentType_CHAIN,
			Name:        "Chain Agent",
			Description: "é“¾å¼ä»£ç†ï¼ŒæŒ‰é¢„å®šä¹‰æµç¨‹æ‰§è¡Œå¤šä¸ªAgent",
			Available:   true,
		},
		{
			Type:        pb.AgentType_PLAN,
			Name:        "Plan Agent",
			Description: "è®¡åˆ’ä»£ç†ï¼Œå…ˆè§„åˆ’åæ‰§è¡Œå¤æ‚ä»»åŠ¡",
			Available:   true,
		},
		{
			Type:        pb.AgentType_SQL,
			Name:        "SQL Agent",
			Description: "SQLæŸ¥è¯¢ä¸“å®¶ï¼Œç”Ÿæˆå’Œæ‰§è¡Œæ•°æ®åº“æŸ¥è¯¢",
			Available:   false, // éœ€è¦æ•°æ®åº“è¿æ¥
		},
	}

	return &pb.AgentTypesResponse{
		Types: types,
	}, nil
}

// ListTools åˆ—å‡ºå¯ç”¨çš„å·¥å…·
func (s *AgentServer) ListTools(ctx context.Context, req *pb.Empty) (*pb.ToolsResponse, error) {
	toolManager := tools.GetToolManager()
	availableTools := toolManager.AvailableTools()

	toolInfos := make([]*pb.ToolInfo, 0, len(availableTools))
	for _, tool := range availableTools {
		toolType := "Normal"
		if tool.Type() == core.Mcp {
			toolType = "MCP"
		}

		toolInfos = append(toolInfos, &pb.ToolInfo{
			Name:        tool.Name(),
			Description: tool.Description(),
			Type:        toolType,
		})
	}

	return &pb.ToolsResponse{
		Tools: toolInfos,
	}, nil
}

// è¾…åŠ©æ–¹æ³•

func (s *AgentServer) getOrCreateSession(req *pb.ChatRequest) (*agent.Context, error) {
	sessionID := req.SessionId
	if sessionID == "" {
		sessionID = fmt.Sprintf("session_%d", time.Now().UnixNano())
	}

	s.sessionsLock.Lock()
	defer s.sessionsLock.Unlock()

	session, exists := s.sessions[sessionID]
	if !exists || time.Since(session.UpdatedAt) > 30*time.Minute {
		// åˆ›å»ºæ–°ä¼šè¯
		mem := memory.NewMemory()

		// å¦‚æœæœ‰è‡ªå®šä¹‰ç³»ç»Ÿæç¤ºè¯ï¼Œæ·»åŠ åˆ°å†…å­˜
		if req.SystemPrompt != "" {
			mem.AddMessage(core.Message{
				Role:    core.MessageRoleSystem,
				Content: req.SystemPrompt,
			})
		}

		ctx := agent.NewContext(
			agent.WithModel(req.Model),
			agent.WithChat(s.chat),
			agent.WithMemory(mem),
		)

		session = &SessionContext{
			Memory:    mem,
			Context:   ctx,
			CreatedAt: time.Now(),
			UpdatedAt: time.Now(),
		}

		s.sessions[sessionID] = session
	}

	session.UpdatedAt = time.Now()
	return session.Context, nil
}

func (s *AgentServer) createExecutor(req *pb.ChatRequest, ctx *agent.Context) (*agent.AgentExecutor, error) {
	maxSteps := int(req.MaxSteps)
	if maxSteps == 0 {
		maxSteps = 10
	}

	var executor *agent.AgentExecutor

	switch req.AgentType {
	case pb.AgentType_REACT:
		executor = agent.NewAgentExecutor(ctx)
		executor.SetMaxSteps(maxSteps)

	case pb.AgentType_CHAIN:
		// Chainéœ€è¦ç‰¹æ®Šé…ç½®ï¼Œè¿™é‡Œæä¾›ä¸€ä¸ªé»˜è®¤é“¾
		builder := agent.NewChainBuilder(ctx)
		builder.
			AddNode("main", agent.ReactAgentType, maxSteps)
		chainAgent := builder.Build()
		executor = agent.NewChainAgentExecutor(ctx, chainAgent)

	case pb.AgentType_PLAN:
		enableReplan := req.Config["enable_replan"] == "true"
		executor = agent.NewPlanAgentExecutor(ctx, enableReplan)
		executor.SetMaxSteps(maxSteps)

	case pb.AgentType_SQL:
		dbInfo := req.Config["db_info"]
		if dbInfo == "" {
			dbInfo = "Database"
		}
		executor = agent.NewSQLAgentExecutor(ctx, dbInfo)
		executor.SetMaxSteps(maxSteps)

	default:
		return nil, fmt.Errorf("unsupported agent type: %v", req.AgentType)
	}

	return executor, nil
}

func (s *AgentServer) getAgentTypeName(agentType pb.AgentType) string {
	switch agentType {
	case pb.AgentType_REACT:
		return "ReAct"
	case pb.AgentType_CHAIN:
		return "Chain"
	case pb.AgentType_PLAN:
		return "Plan"
	case pb.AgentType_SQL:
		return "SQL"
	default:
		return "Unknown"
	}
}

func (s *AgentServer) extractToolNames(mem core.Memory) []string {
	toolNames := make(map[string]bool)
	messages := mem.GetMessages()

	for _, msg := range messages {
		if msg.Role == core.MessageRoleUser && strings.Contains(msg.Content, "Observation:") {
			// ç®€å•æå–å·¥å…·åç§°
			content := msg.Content
			if idx := strings.Index(content, "["); idx != -1 {
				if endIdx := strings.Index(content[idx:], "]"); endIdx != -1 {
					toolName := content[idx+1 : idx+endIdx]
					toolNames[toolName] = true
				}
			}
		}
	}

	result := make([]string, 0, len(toolNames))
	for name := range toolNames {
		result = append(result, name)
	}
	return result
}

func (s *AgentServer) monitorExecution(mem core.Memory, msgChan chan<- core.Message, done <-chan bool) {
	lastCount := 0
	ticker := time.NewTicker(50 * time.Millisecond) // ç¼©çŸ­è½®è¯¢é—´éš”åˆ°50ms
	defer ticker.Stop()

	fmt.Println("ğŸ” å¼€å§‹ç›‘å¬æ‰§è¡Œè¿‡ç¨‹...")

	for {
		select {
		case <-done:
			fmt.Println("â¹ï¸ æ‰§è¡Œå®Œæˆä¿¡å·ï¼Œæ£€æŸ¥å‰©ä½™æ¶ˆæ¯...")
			// åœ¨å…³é—­å‰ï¼Œå†æ£€æŸ¥ä¸€æ¬¡æ˜¯å¦æœ‰æ–°æ¶ˆæ¯
			messages := mem.GetMessages()
			if len(messages) > lastCount {
				fmt.Printf("ğŸ“¬ å‘é€å‰©ä½™ %d æ¡æ¶ˆæ¯\n", len(messages)-lastCount)
				for i := lastCount; i < len(messages); i++ {
					msgChan <- messages[i]
				}
			}
			// ç­‰å¾…ä¸€å°æ®µæ—¶é—´ç¡®ä¿æ¶ˆæ¯éƒ½è¢«å‘é€
			time.Sleep(50 * time.Millisecond)
			fmt.Println("âœ… æ¶ˆæ¯ç›‘å¬ç»“æŸ")
			close(msgChan)
			return
		case <-ticker.C:
			messages := mem.GetMessages()
			if len(messages) > lastCount {
				// å‘é€æ–°æ¶ˆæ¯
				newCount := len(messages) - lastCount
				fmt.Printf("ğŸ“¬ æ£€æµ‹åˆ° %d æ¡æ–°æ¶ˆæ¯ (æ€»è®¡: %d)\n", newCount, len(messages))
				for i := lastCount; i < len(messages); i++ {
					msg := messages[i]
					fmt.Printf("  â†’ [%s] %s\n", msg.Role, msg.Content[:min(60, len(msg.Content))])
					msgChan <- msg
				}
				lastCount = len(messages)
			}
		}
	}
}

func (s *AgentServer) parseMessage(msg core.Message) (pb.ChatStreamResponse_MessageType, string) {
	content := msg.Content

	switch msg.Role {
	case core.MessageRoleAssistant:
		if strings.Contains(content, "Thought:") {
			return pb.ChatStreamResponse_THINKING, content
		} else if strings.Contains(content, "Action:") {
			return pb.ChatStreamResponse_ACTION, content
		}
		return pb.ChatStreamResponse_THINKING, content

	case core.MessageRoleUser:
		if strings.Contains(content, "Observation:") {
			return pb.ChatStreamResponse_OBSERVATION, content
		}
		return pb.ChatStreamResponse_OBSERVATION, content

	default:
		return pb.ChatStreamResponse_METADATA, content
	}
}

// CleanupSessions æ¸…ç†è¿‡æœŸä¼šè¯
func (s *AgentServer) CleanupSessions() {
	s.sessionsLock.Lock()
	defer s.sessionsLock.Unlock()

	now := time.Now()
	for id, session := range s.sessions {
		if now.Sub(session.UpdatedAt) > 30*time.Minute {
			delete(s.sessions, id)
		}
	}
}

// min è¾…åŠ©å‡½æ•°
func min(a, b int) int {
	if a < b {
		return a
	}
	return b
}
